fixed outline issue but not quite clear on collapse issue

--- a/packages/desktop-gui/src/settings/settings.scss
+++ b/packages/desktop-gui/src/settings/settings.scss
@@ -148,6 +148,10 @@
     position: relative;
     left: -15px;
 
+    &:focus {
+      outline: 0;
+    }
+
     .arrow {
       @extend .#{$fa-css-prefix};
       @extend .#{$fa-css-prefix}-caret-right;
